# pohualli-python

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  desktop-bundles.yml  docker-images.yml  docs.yml  release.yml
docs/: dev.md  index.md  license.md
docs/concepts/: calendars.md  configuration.md
docs/usage/: cli.md  desktop.md  python-api.md  quickstart.md
notebooks/: pohualli_colab.ipynb
pohualli/: __init__.py  autocorr.py  calendar_dates.py  cli.py  composite.py  correlations.py  moon.py  planets.py  types.py  webapp.py  yearbear.py
pohualli/templates/: index.html
py/: pyproject.toml
py/pohualli/: aztec.py  cli.py  cycle819.py  maya.py  zodiac.py
tests/: test_cli_search_range.py  test_web.py
